# Licenta

./: .gitignore  Dockerfile  asd.json  gunicorn.conf.py  init-data,json  nginx.conf  pyproject.toml  requirements.txt  test.ipynb  test.py  test.txt
backend/: .gitignore  db.sqlite3  entrypoint.sh  manage.py
backend/backend/: celery.py  loggers.py  settings.py  urls.py
backend/backend/settings/: common.py  dev.py  prod.py
backend/licenta/: admin.py  apps.py  category_import.py  lista_analize.ipynb  models.py  serializers.py  signals.py  tasks.py  views.py
backend/licenta/extraction/: all.py  extraction.py  ocr.py  sorting.py  text_extraction.py
backend/licenta/fixtures/: providers.json
backend/licenta/migrations/: 0001_initial.py  0002_alter_analysis_options_and_more.py  0002_analizepdf_analize_analizerezultate_radiografiepdf.py  0003_alter_analysisprovider_crops_pixels_and_more.py  0003_remove_analizerezultate_frompdf_and_more.py  0004_alter_analizerezultate_expected.py  0004_analysisresult_in_range.py  0005_alter_analizerezultate_range_max_and_more.py  0005_analysis_date.py  0006_analize_date.py  0006_analysispdf_doctor_notes_analysispdf_suggestion_and_more.py  0007_analizerezultate_suggestion.py  0007_analysisresult_doctor_note_and_more.py  0008_analysis_modified_analysispdf_modified_and_more.py  0009_analysisprovider_analysis_list.py  0010_analysisprovider_analysis_providedlang.py  0011_analysisprovider_analysis_columns_and_more.py  0012_extraanalysiscategories_translation.py  0013_alter_analysisprovider_analysis_columns.py  0014_alter_analysis_date_alter_analysis_notes_and_more.py  0015_user_is_doctor_user_patients.py  0016_remove_user_patients_patientinvite.py  0017_alter_patientinvite_expires.py  (+9 more)
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: hooks.server.ts
tests/: image_processing.py  reading.py  text_extraction.py
(+62 files in other folders)
